--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "frontity dev",
-    "build": "frontity build",
+    "build": "cross-env NODE_OPTIONS='--openssl-legacy-provider' frontity build",
     "serve": "frontity serve"
   },
   "prettier": {},
